--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ O_lurida/data/Olurida_v081-bowtie-index.rev.8.sa
 *.sam
 C_gigas/.*
 C_gigas/.Rproj.user/*
+C_gigas/.Rproj.user/D3E3A8DF/sources/prop/F7305753
