--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ C_gigas/.*
 C_gigas/.Rproj.user/*
 C_gigas/.Rproj.user/D3E3A8DF/sources/prop/F7305753
 .Rproj.user
+blastdb/*
+C_gigas/data/GCF_000297895.1_oyster_v9_cds_from_genomic.fna
