--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ C_gigas/.Rproj.user/D3E3A8DF/sources/prop/F7305753
 .Rproj.user
 blastdb/*
 C_gigas/data/GCF_000297895.1_oyster_v9_cds_from_genomic.fna
+C_gigas/data/cgigas_uk_roslin_v1_genomic-mito.fa
