--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ C_gigas/.Rproj.user/D3E3A8DF/sources/prop/F7305753
 blastdb/*
 C_gigas/data/GCF_000297895.1_oyster_v9_cds_from_genomic.fna
 C_gigas/data/cgigas_uk_roslin_v1_genomic-mito.fa
+C_gigas/analyses/cgigas_uk_roslin_v1_genomic-mito.tab
