--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ blastdb/*
 C_gigas/data/GCF_000297895.1_oyster_v9_cds_from_genomic.fna
 C_gigas/data/cgigas_uk_roslin_v1_genomic-mito.fa
 C_gigas/analyses/cgigas_uk_roslin_v1_genomic-mito.tab
+C_gigas/data/uniprot/*
