made old e2 fasta

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ C_gigas/data/GCF_000297895.1_oyster_v9_cds_from_genomic.fna
 C_gigas/data/cgigas_uk_roslin_v1_genomic-mito.fa
 C_gigas/analyses/cgigas_uk_roslin_v1_genomic-mito.tab
 C_gigas/data/uniprot/*
+C_gigas/data/Crassostrea_gigas.oyster_v9.dna_sm.toplevel.fa
