--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ C_gigas/data/cgigas_uk_roslin_v1_genomic-mito.fa
 C_gigas/analyses/cgigas_uk_roslin_v1_genomic-mito.tab
 C_gigas/data/uniprot/*
 C_gigas/data/Crassostrea_gigas.oyster_v9.dna_sm.toplevel.fa
+C_bairdi/data/uniprot-reviewed-20210901.tab
